Code formatting + addition of @Builder annotation functionality and creation of a UtilityData class for code cleanliness.