@@ -6,10 +6,8 @@ import com.beautyServices.BeautyServices.repository.CustomerRepository;
 import com.beautyServices.BeautyServices.service.CustomerService;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
@@ -17,7 +15,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -28,7 +25,6 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(CustomerViewController.class)
-@ExtendWith(MockitoExtension.class)
 public class CustomerViewControllerTest {
 
     @Autowired
@@ -49,7 +45,7 @@ public class CustomerViewControllerTest {
 
     @Test
     public void shouldReturnCustomerListView() throws Exception {
-        List<Customer> customers = Arrays.asList(new Customer(), new Customer());
+        List<Customer> customers = List.of(new Customer(), new Customer());
         Mockito.when(customerRepository.findAll()).thenReturn(customers);
         mockMvc.perform(get("/customers")
                         .with(SecurityMockMvcRequestPostProcessors.user("user").roles("USER")))
@@ -202,5 +198,4 @@ public class CustomerViewControllerTest {
 
         Mockito.verify(customerService).deleteCustomer(customerId);
     }
-
 }
